--- a/_config.yml
+++ b/_config.yml
@@ -131,8 +131,8 @@ comments:
     clientSecret: b57a6e91f600ac16959e0f255a2889aa9ec5c473 # GitHub Application Client Secret
     repository  : gitalk # GitHub repo
     owner       : hao93 # GitHub repo owner
-    admin: hao93 # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
-      # - your GitHub Id
+    admin: hao93
+      - hao93
 
   ## Valine
   # please refer to https://valine.js.org/en/ for more info.
