--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ sharing:
 ## => Comments
 ##############################
 comments:
-  provider: gitalk # false (default), "disqus", "gitalk", "valine", "custom"
+  provider: valine # false (default), "disqus", "gitalk", "valine", "custom"
 
   ## Disqus
   disqus:
@@ -137,8 +137,8 @@ comments:
   ## Valine
   # please refer to https://valine.js.org/en/ for more info.
   valine:
-    app_id      : # LeanCloud App id
-    app_key     : # LeanCloud App key
+    app_id      : 3qeedQ08lqDUjO3CttToy1Jq-gzGzoHsz # LeanCloud App id
+    app_key     : Xf9QwHn4gbC1oh8BrodcTBSk # LeanCloud App key
     placeholder : # Prompt information
     visitor     : # false (default)
     meta        : # "[nick, mail, link]" (default) nickname, E-mail, Personal-site
@@ -147,13 +147,13 @@ comments:
 ## => Pageview
 ##############################
 pageview:
-  provider: false # false (default), "leancloud", "custom"
+  provider: leancloud # false (default), "leancloud", "custom"
 
   ## Leancloud
   leancloud:
-    app_id    : # LeanCloud App id
-    app_key   : # LeanCloud App key
-    app_class : # LeanCloud App class
+    app_id    : 3qeedQ08lqDUjO3CttToy1Jq-gzGzoHsz # LeanCloud App id
+    app_key   : Xf9QwHn4gbC1oh8BrodcTBSk # LeanCloud App key
+    app_class : comment # LeanCloud App class
 
 
 ## => Search
